--- a/.github/workflows/raytraceantixray.yml
+++ b/.github/workflows/raytraceantixray.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build RayTraceAntiXray
         run: |
           cd ~/RayTraceAntiXray
-          ./compilew
+          ./compile.sh
 
       # Get the date of the build
       - name: Get date
