--- a/.github/workflows/raytraceantixray.yml
+++ b/.github/workflows/raytraceantixray.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Get jar file name
         id: get_name
-        run: echo "::set-output name=name::$(ls ~/RayTraceAntiXray/build/libs/ | grep .jar)"
+        run: echo "::set-output name=name::$(ls ~/RayTraceAntiXray/target/ | grep spigot-mapped.jar)"
 
       # Create a release with the date as the title and tag
       - name: Create Release
@@ -65,7 +65,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: ~/RayTraceAntiXray/build/libs/${{ steps.get_name.outputs.name }}
+          asset_path: ~/RayTraceAntiXray/target/${{ steps.get_name.outputs.name }}
           asset_name: ${{ steps.get_name.outputs.name }}
           asset_content_type: application/java-archive
 
