--- a/.github/workflows/raytraceantixray.yml
+++ b/.github/workflows/raytraceantixray.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-default-branch:
     runs-on: ubuntu-latest
+    continue-on-error: true
 
     steps:
       - name: Set the git information
@@ -35,6 +36,7 @@ jobs:
         run: |
           cd ~/RayTraceAntiXray
           ./compile.sh
+          continue-on-error: true
 
       # Get the date of the build
       - name: Get date
