--- a/.github/workflows/raytraceantixray.yml
+++ b/.github/workflows/raytraceantixray.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Get jar file name
         id: get_name
-        run: echo "::set-output name=name::$(ls ~/RayTraceAntiXray/RayTraceAntiXray/target/ | grep spigot-mapped.jar)"
+        run: echo "::set-output name=name::$(ls /home/runner/RayTraceAntiXray/RayTraceAntiXray/target/ | grep spigot-mapped.jar)"
 
       # Create a release with the date as the title and tag
       - name: Create Release
@@ -67,7 +67,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: ~/RayTraceAntiXray/RayTraceAntiXray/target/${{ steps.get_name.outputs.name }}
+          asset_path: /home/runner/RayTraceAntiXray/RayTraceAntiXray/target/${{ steps.get_name.outputs.name }}
           asset_name: ${{ steps.get_name.outputs.name }}
           asset_content_type: application/java-archive
 
@@ -132,7 +132,7 @@ jobs:
 
       - name: Get jar file name
         id: get_name1
-        run: echo "::set-output name=name1::$(ls ~/RayTraceAntiXray/build/libs/ | grep .jar)"
+        run: echo "::set-output name=name1::$(ls /home/runner/RayTraceAntiXray/RayTraceAntiXray/target/ | grep spigot-mapped.jar)"
 
       - name: Get upload_url
         id: get_upload_url
@@ -150,7 +150,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_upload_url.outputs.data }}
-          asset_path: ~/RayTraceAntiXray/build/libs/${{ steps.get_name1.outputs.name1 }}
+          asset_path: /home/runner/RayTraceAntiXray/RayTraceAntiXray/target/${{ steps.get_name1.outputs.name1 }}
           asset_name: ${{ steps.get_name1.outputs.name1 }}
           asset_content_type: application/java-archive
     permissions:
